@startuml

skinparam classAttributeIconSize 0
skinparam style strictuml
skinparam linetype ortho



' Group the user classes
class User {
        UserName
        Name
        Company
        checkInStatus
       
    }
    
    class Admin {
        Password
    }
    
    class Contingency_Responsible {
        Password
    }
    
    class Colour {
        selectedColour
    }
    
    class ImageTod {
        selectedPath
    }
    
    Admin --|> User
    Contingency_Responsible --|> User

    ImageTod "3"--"1" Contingency_Responsible
    ImageTod "3"--"1" Admin

    Colour "3" -- "1" Admin
    





@enduml